syntax = "proto3";

package Kahuna.Server.Replication.Protos;

message KeyValueMessage {
  int32 type = 1;
  string key = 2;
  optional bytes value = 3;
  int64 revision = 4;
  int64 expirePhysical = 5;
  uint32 expireCounter = 6;
  int64 lastUsedPhysical = 7;
  uint32 lastUsedCounter = 8;
  int64 lastModifiedPhysical = 9;
  uint32 lastModifiedCounter = 10;
  int64 timePhysical = 11;
  uint32 timeCounter = 12;
}